5. Подсчет функции в диапазоне. [#380289]